Fix content overflow on small screens

--- a/static/css/main.sass
+++ b/static/css/main.sass
@@ -23,7 +23,6 @@ html
 	*, *:before, *:after
 		box-sizing: inherit
 	height: 100%
-	width: 100%
 
 b
 	font-weight: bold
@@ -38,20 +37,17 @@ a
 		text-decoration: underline
 
 body
-	position: relative
+	//position: relative
 	background: $body-background
 	height: 100%
 	font-family: Helvetica
 	font-weight: lighter
-	width: 100%
-	overflow-x: hidden
 
 .main-wrapper
 	width: 100%
 	height: 100%
 	display: block
 	padding: 0 $side-padding
-	//max-width: 1200px
 
 .navigation
 
@@ -94,6 +90,7 @@ body
 	background-image: url(/img/background-green.svg)
 	background-size: cover
 	overflow: auto // Clear floats to avoid collapse
+	overflow-x: hidden
 
 	.edge
 		position: absolute
